# knowledge-complier-agent

./: .gitignore  README.md  a.py  agentic_knowledge_compiler_prd.md  pyproject.toml
sprints/: 2026-04-03-phase1-ingestion.md  2026-04-03-phase2-terminal-cli-chat.md  2026-04-03-repo-release-prep.md
src/akc/: __init__.py  config.py  main.py
src/akc/agents/: __init__.py  ingestion.py  prompts.py  query.py  types.py
src/akc/api/: __init__.py  app.py
src/akc/storage/: __init__.py  agentfs_store.py
tests/: test_api.py  test_ingestion_compiler.py  test_query.py  test_storage.py  test_terminal_cli.py
